@@ -453,6 +453,7 @@
 #define IDC_CUSTOMNAME                  347
 #define IDS_PLAY                        347
 #define IDC_COMBO8                      347
+#define IDC_STAR_THICKNESS_EDIT         347
 #define IDD_PROPDECAL_VISUALS           348
 #define IDC_CUSTOMVALUE                 348
 #define IDS_PAUSE                       348
@@ -795,7 +796,7 @@
 #define IDC_PLAYFIELD_ELASTICITY        1708
 #define IDC_PLAYFIELD_ELASTICITY_FALLOFF 1709
 #define IDC_PLAYFIELD_SCATTER           1710
-#define IDC_TABLE_FILENAME		1711
+#define IDC_TABLE_FILENAME              1711
 #define IDM_NEW                         32768
 #define IDM_OPEN                        32769
 #define IDM_CLOSE                       32770
